## Find source and headers
FILE(GLOB_RECURSE HEADERS *.h)
FILE(GLOB_RECURSE SOURCES *.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
IF(UNIX AND NOT APPLE)
  SET(PLATFORM_LIBRARIES Xxf86vm)
ENDIF(UNIX AND NOT APPLE)

INCLUDE_DIRECTORIES(
  ## Maratis include directories
  ${MARATIS_COMMON_INCLUDE_DIR}
  ${MCORE_INCLUDE_DIR}
  ${MENGINE_INCLUDE_DIR}
  ${MGUI_INCLUDE_DIR}

  ## 3rdparty include directories
  ${BULLET_INCLUDE_DIR}
  ${DEVIL_INCLUDE_DIR}
  ${FREETYPE_INCLUDE_DIR}
  ${GLEE_INCLUDE_DIR}
  ${JPEG_INCLUDE_DIR}
  ${PNG_INCLUDE_DIR}
  ${SNDFILE_INCLUDE_DIR}
  ${LUA_INCLUDE_DIR}
  ${NPK_INCLUDE_DIR}
  ${OPENAL_INCLUDE_DIR}
  ${TINYXML_INCLUDE_DIR}
  ${ZLIB_INCLUDE_DIR}
)

SET(CMAKE_INSTALL_RPATH ".;@loader_path/.;${CMAKE_INSTALL_PREFIX}")

ADD_EXECUTABLE(MaratisPlayer ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(MaratisPlayer
  ## Maratis libraries
  ${MARATIS_COMMON_LIBRARIES}
  ${MCORE_LIBRARIES}
  ${MENGINE_LIBRARIES}
  ${MGUI_LIBRARIES}

  ## 3rdparty libraries
  ${BULLET_LIBRARIES}
  ${DEVIL_LIBRARIES}
  ${FREETYPE_LIBRARIES}
  ${GLEE_LIBRARIES}
  ${JPEG_LIBRARIES}
  ${PNG_LIBRARIES}
  ${SNDFILE_LIBRARIES}
  ${LUA_LIBRARIES}
  ${NPK_LIBRARIES}
  ${TINYXML_LIBRARIES}
  ${OPENAL_LIBRARIES}
  ${ZLIB_LIBRARIES}

  ## System libraries
  ${OPENGL_LIBRARIES}
  ${PLATFORM_LIBRARIES}
)

INSTALL(TARGETS MaratisPlayer DESTINATION ${MARATIS_INSTALL_DIR})