## Find source and headers

IF(ANDROID)
FILE(GLOB_RECURSE HEADERS *.h)
FILE(GLOB_RECURSE SOURCES *.c*)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ## Neo include directories
  ${NEO_COMMON_INCLUDE_DIR}
  ${MENGINE_INCLUDE_DIR}
  ${MCORE_INCLUDE_DIR}
  ${NEOGUI_INCLUDE_DIR}

  ## 3rdparty include directories
  ${BULLET_INCLUDE_DIR}
  ${FREETYPE_INCLUDE_DIR}
  ${GLEE_INCLUDE_DIR}
  ${JPEG_INCLUDE_DIR}
  ${PNG_INCLUDE_DIR}
  ${LUA_INCLUDE_DIR}
  ${NPK_INCLUDE_DIR}
  ${SDL_INCLUDE_DIR}
  ${OPENAL_INCLUDE_DIR}
  ${TINYXML_INCLUDE_DIR}
  ${ZLIB_INCLUDE_DIR}
)

SET(CMAKE_INSTALL_RPATH "@loader_path/.")
ADD_LIBRARY(AndroidPlayer STATIC ${SOURCES} ${HEADERS})

INSTALL(TARGETS AndroidPlayer DESTINATION ${NEO_INSTALL_DIR})
ENDIF()
