## Find source and headers
FILE(GLOB_RECURSE HEADERS *.h)
FILE(GLOB_RECURSE SOURCES *.c*)
FILE(GLOB_RECURSE VERT_SHADERS *.vert)
FILE(GLOB_RECURSE FRAG_SHADERS *.frag)

IF(APPLE)
    FILE(GLOB_RECURSE MAC_SOURCES *.mm)
ELSE()
    SET(MAC_SOURCES "")
ENDIF()

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build TODO: Only when editor is built!
ADD_DEFINITIONS(-DM_PACKAGE_WRITABLE)

IF(WIN32)
    SET(WINSOCK_LIBRARIES ws2_32)
ENDIF()

## Build
INCLUDE_DIRECTORIES(
  ${NEO_COMMON_INCLUDE_DIR}
  ${NEO_CORE_INCLUDE_DIR}
  ${NEO_ENGINE_INCLUDE_DIR}

  ${ASSIMP_INCLUDE_DIR}
  ${BULLET_INCLUDE_DIR}
  ${FREETYPE_INCLUDE_DIR}
  ${GLEW_INCLUDE_DIR}
  ${JPEG_INCLUDE_DIR}
  ${PNG_INCLUDE_DIR}
  ${OGG_INCLUDE_DIR}
  ${VORBIS_INCLUDE_DIR}
  ${LUA_INCLUDE_DIR}
  ${NPK_INCLUDE_DIR}
  ${OPENAL_INCLUDE_DIR}
  ${SDL_INCLUDE_DIR}
  ${TINYXML_INCLUDE_DIR}
  ${ZLIB_INCLUDE_DIR}
  ${TINYUTF8_INCLUDE_DIR}
  )

ADD_DEFINITIONS(-DNEO_COMMON_DLL)
SET(CMAKE_SHARED_LIBRARY_PREFIX "")
ADD_LIBRARY(NeoCommon SHARED ${SOURCES} ${MAC_SOURCES} ${HEADERS})

IF(WIN32)
    TARGET_LINK_LIBRARIES(NeoCommon wsock32 ws2_32)
ENDIF()

# Needed for windows
TARGET_LINK_LIBRARIES(NeoCommon
    ${NEO_CORE_LIBRARIES}
    ${NEO_ENGINE_LIBRARIES}
    ${NEO2D_LIBRARIES}

    ## 3rdparty libraries
    ${BULLET_LIBRARIES}
    ${FREETYPE_LIBRARIES}
    ${GLEW_LIBRARIES}
    ${JPEG_LIBRARIES}
    ${PNG_LIBRARIES}
    ${VORBIS_LIBRARIES}
    ${OGG_LIBRARIES}
    ${LUA_LIBRARIES}
    ${NPK_LIBRARIES}
    ${SDL_LIBRARIES}
    ${TINYXML_LIBRARIES}
    ${OPENAL_LIBRARIES}
    ${ZLIB_LIBRARIES}

    ## System libraries
    ${OPENGL_LIBRARIES}
    ${OPENGLES2_LIBRARIES}
    ${PLATFORM_LIBRARIES}
    ${ASSIMP_LIBRARIES}
)

INCLUDE(CopyFiles)
ADD_DEFINITIONS(-DSHADER_PATH="assets/shaders/Renderers" -DGL_DEBUG)

# Copy shaders
copy_files("Renderers/*.vert" "${NEO_BINARY_OUTPUT}/assets/shaders" "copy-vert-shaders")
copy_files("Renderers/*.frag" "${NEO_BINARY_OUTPUT}/assets/shaders" "copy-frag-shaders")

INSTALL(FILES ${VERT_SHADERS} ${FRAG_SHADERS} DESTINATION ${NEO_INSTALL_DIR}/assets/shaders/Renderers)
INSTALL(TARGETS NeoCommon DESTINATION ${NEO_INSTALL_DIR})
