## Find source and headers
FILE(GLOB_RECURSE HEADERS *.h)
#FILE(GLOB_RECURSE SOURCES *.c*)

SET(SOURCES main.c)

IF(CMAKE_HAS_SORT)
  LIST(SORT HEADERS)
  LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

## Build
INCLUDE_DIRECTORIES(
  ${LUA_INCLUDE_DIR}
)

SET(CMAKE_SHARED_LIBRARY_PREFIX "")
ADD_LIBRARY(LuaCommonDlg ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(LuaCommonDlg ${LUA_LIBRARIES})

IF(UNIX)
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(GTK3 REQUIRED gtk+-3.0)

	IF(GTK3_FOUND)
	   MESSAGE("-- Found GTK3 with include dir " ${GTK3_INCLUDE_DIRS})
	   INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})
	   TARGET_LINK_LIBRARIES(LuaCommonDlg ${GTK3_LIBRARIES})
	ELSE()
	   MESSAGE(FATAL_ERROR "-- Could not find GTK3!")
	ENDIF(GTK3_FOUND)
ENDIF()

INSTALL(TARGETS LuaCommonDlg DESTINATION ${NEO_INSTALL_DIR})
