add_subdirectory(LuaScripting)
add_subdirectory(GL4Context)
add_subdirectory(CommonBehaviors)
add_subdirectory(AssetLoading)
add_subdirectory(StandardRenderer)
add_subdirectory(OpenALContext)
add_subdirectory(SDLGame)
add_subdirectory(NeoEditor)
add_subdirectory(Neo2DPlugin)
add_subdirectory(BulletPhysics)
add_subdirectory(NPK)
