add_subdirectory(LuaScripting)
add_subdirectory(GL4Context)
add_subdirectory(CommonBehaviors)
add_subdirectory(AssetLoading)
add_subdirectory(StandardRenderer)
add_subdirectory(OpenALContext)
add_subdirectory(SDLGame)
add_subdirectory(NeoEditor)
add_subdirectory(Neo2DPlugin)
add_subdirectory(BulletPhysics)
add_subdirectory(NPK)
add_subdirectory(NeoSharp)
add_subdirectory(GL2Context)

if(USE_GLES)
    add_subdirectory(GLESRenderer)
endif()